[MNG-8260] Fix warning on latest JDK 24.ea (#1718)